Remove Alpha Vantage support
